Refactoring Server + framework.lists